@@ -40,6 +40,8 @@ Version 1.5.5+svn:
  * Help menu:
    * ability upgrades for max-level advancements are now listed (bug #10337)
  * Language and i18n:
+   * Fixed a problem on OSX where the locales detection didn't
+     work; all languages are now enabled for OSX.
    * updated translations: Catalan, Czech, Danish, Finnish, Galician, German,
      Hungarian, Italian, Lithuanian, Racv, Slovak, Turkish
    * new translations: Valencian (the previous non-standard translation has
